@@ -1,4 +1,4 @@
-#!/usr/bin/icmake -qt/tmp/exec
+#!/usr/bin/icmake -qt/tmp/comp
 
 // script generated by the C++ icmake script version 2.33
 
